fixed glitchy hamburger spacing

--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -27,7 +27,6 @@ a:hover{
     position: sticky;
     top: 0;
     width: 100%;
-    height: 60px;
     z-index: 3;
     background-color: white;
 }
